// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component when hasIcon property is false should match snapshot 1`] = `
<div
  className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-1 makeStyles-input-4"
  onClick={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <input
    className="MuiInputBase-input MuiInput-input"
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`Input component when hasIcon property is true should match snapshot 1`] = `
<div
  className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-1 makeStyles-input-3"
  onClick={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <input
    className="MuiInputBase-input MuiInput-input"
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`Input component when multiline property is explicitly false should match snapshot 1`] = `
<div
  className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-1 makeStyles-input-7"
  onClick={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <input
    className="MuiInputBase-input MuiInput-input"
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`Input component when no props are provided should match snapshot 1`] = `
<div
  className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-1 makeStyles-input-2"
  onClick={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <input
    className="MuiInputBase-input MuiInput-input"
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`Input component when rows property is set and multiline property is explicitly false should match snapshot 1`] = `
<div
  className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-1 makeStyles-input-9"
  onClick={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <input
    className="MuiInputBase-input MuiInput-input"
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    rows={1}
    type="text"
  />
</div>
`;

exports[`Input component when rows property is set should match snapshot 1`] = `
<div
  className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-1 makeStyles-input-8"
  onClick={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <input
    className="MuiInputBase-input MuiInput-input"
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    rows={1}
    type="text"
  />
</div>
`;

exports[`Input component when state is error should match snapshot 1`] = `
<div
  className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-1 makeStyles-input-5"
  data-state="error"
  onClick={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <input
    className="MuiInputBase-input MuiInput-input"
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`Input component when state is success should match snapshot 1`] = `
<div
  className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-1 makeStyles-input-6"
  data-state="success"
  onClick={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <input
    className="MuiInputBase-input MuiInput-input"
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;
